# GoonRenderer

./: .gitignore  .gitmodules  .travis.yml  CMakeFiles.txt  CMakeLists.txt  LICENSE  README.md  azure_pipelines.yml
Builds/CMake/: CompileOptions.cmake
Extensions/: CMakeFiles.txt  CMakeLists.txt
Extensions/GoonBMP/: CMakeFiles.txt  CMakeLists.txt
Extensions/GoonBMP/Includes/gbmp/: bmp_image.h
Extensions/GoonBMP/Sources/: main.cpp
Extensions/GoonBMP/gbmp/: bmp_image.h
Extensions/GoonMath/: CMakeFiles.txt  CMakeLists.txt
Extensions/GoonMath/(deprecated)/Includes/gm/: mat4.h  vec3.h
Extensions/GoonMath/(deprecated)/Includes/gm/details/: platform.h  type_mat3.h  type_mat4x2.h  type_mat4x4.h  type_mat4x4.inl  type_vec2.h  type_vec2.inl  type_vec3.h  type_vec3.inl  type_vec4.h
Extensions/GoonMath/(deprecated)/Includes/gm/property/: attribute.h  attribute.inl  relation.h  relation.inl  transform.h  transform.inl
Extensions/GoonMath/(deprecated)/Includes/gm/type_specialization/: mat4_bool.h  mat4_double.h  mat4_float.h  mat4_uint.h  vec2_bool.h  vec2_double.h  vec2_float.h  vec2_int.h  vec2_uint.h  vec3_bool.h  vec3_double.h  vec3_float.h  vec3_int.h  vec3_uint.h  vec4_bool.h  vec4_double.h  vec4_float.h  vec4_int.h  vec4_uint.h
Extensions/GoonMath/(deprecated)/Sources/: main.cpp
Extensions/GoonMath/Includes/: vec.h  vector.h
Extensions/GoonMath/Includes/details/: vec3.h  vec_base.h  vec_transform.h
Extensions/GoonMath/Includes/gm/: bitwise.h  util.h  vec2.h  vec3.h  vec4.h  vector.h  vectorial.h
Extensions/GoonMath/Includes/gm/details/: platform.h  type_mat3.h  type_mat4.h  type_mat4x2.h  type_mat4x4.h  type_mat4x4.inl  type_mat_base.h  type_vec2.h  type_vec2.inl  type_vec3.h  type_vec3.inl  type_vec4.h  type_vec4.inl  type_vec_base.h
Extensions/GoonMath/Includes/gm/internal/: aliasing.h  vector2.h  vector2_simd.h  vector3.h  vector3_simd.h  vector4.h  vector4_simd.h
Extensions/GoonMath/Includes/gm/property/: attribute.h  attribute.inl  relation.h  relation.inl  transform.h  transform.inl
Extensions/GoonMath/Includes/gm/simd/: simd2f.h  simd4f.h
Extensions/GoonMath/Includes/gm/transform/: vec_transform.inl
Extensions/GoonMath/Includes/gm/type_specialization/: mat4_bool.h  mat4_double.h  mat4_float.h  mat4_int.h  mat4_uint.h  vec2_bool.h  vec2_double.h  vec2_float.h  vec2_int.h  vec2_uint.h  vec3_bool.h  vec3_double.h  vec3_float.h  vec3_int.h  vec3_uint.h  vec4_bool.h  vec4_double.h  vec4_float.h  vec4_int.h  vec4_uint.h
Extensions/GoonMath/Sources/: main.cpp
Extensions/GoonMath/gm/: vec3.h
Extensions/GoonMath/gm/details/: type_vec3.h  type_vec3.inl  type_vec4.h
Extensions/GoonMath/gm/property/: vec_property.h  vec_property.inl
Extensions/GoonMath/gm/transform/: vec_transform.h
Extensions/GoonVideo/: CMakeLists.txt
Extensions/GoonVideo/Sources/: main.cpp
GoonRenderer/: CMakeFiles.txt  CMakeLists.txt
GoonRenderer/Includes/: Buffer.h  Camera.h  Colorbuffer.h  Context.h  DataType.h  Filter2D.h  HeaderPrerequistes.h  LineRenderer.h  MeshRenderer.h  Noise2D.h  ObjReader.h  Package.h  Renderer.h  RenderingPipeline.h  Scene.h  Singleton.h  SwapChain.h  Texture.h  Texture2D.h  Util.h  View.h  Window.h
GoonRenderer/Includes/Object/: VBO.h
GoonRenderer/Includes/Pipeline/: FragmentShader.h  InputAssembler.h  Rasterizer.h  VertexShader.h
GoonRenderer/Includes/Resource/: MemoryManager.h  Resource.h
GoonRenderer/Includes/Texture/: Texture.h  Texture2D.h  TextureCompression.h  TextureGeneration.h  TextureManager.h
GoonRenderer/Sources/: Buffer.cpp  Colorbuffer.cpp  Context.cpp  DataType.cpp  Filter2D.cpp  LineRenderer.cpp  MeshRenderer.cpp  Noise2D.cpp  ObjReader.cpp  Renderer.cpp  RenderingPipeline.cpp  SwapChain.cpp  Util.cpp  Window.cpp  main.cpp
GoonRenderer/Sources/Object/: VBO.cpp  VBO.h
GoonRenderer/Sources/Resource/: MemoryManager.cpp
GoonRenderer/Sources/Texture/: Texture.cpp  Texture2D.cpp  TextureCompression.cpp  TextureGeneration.cpp  TextureManager.cpp
Scripts/: GoonBMP  GoonMath  GoonRenderer  GoonRenderer.1  GoonRenderer.txt  GoonVideo  azure_pipelines_macos.yml  azure_pipelines_vs2017.yml  azure_pipelines_vs2019.yml  build_cl.sh  gmon.out  travis_build.sh  travis_ci_linux.sh
